k8s/api.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
  labels:
    app.kubernetes.io/name: api
spec:
  containers:
    - name: api
      image: clipboard-share-api:0.3.0
      ports:
        - containerPort: 8080
          name: http-api-svc
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app.kubernetes.io/name: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http-api-svc
  type: NodePort
