k8s/web.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
  labels:
    app.kubernetes.io/name: web
spec:
  containers:
    - name: web
      image: clipboard-share-web:0.2.0
      ports:
        - containerPort: 80
          name: http-web-svc
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app.kubernetes.io/name: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-web-svc
  type: NodePort
